# NexusFix

./: .clang-tidy  .gitignore  CMakeLists.txt  codecov.yml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  defensive_checks_bench.cpp  error_message_bench.cpp  parse_benchmark.cpp  pipeline_bench.cpp  sbe_benchmark.cpp  timing_comparison.cpp
benchmarks/vs_quickfix/: quickfix_only_benchmark.cpp
docs/: API_QUICK_START_CPP.md
docs/compare/: TICKET_483_E2E_PIPELINE_BASELINE.md  TICKET_484_1_PRICE_SERIALIZATION_AND_SOCKETBRIDGE.md  TICKET_485_CPP26_VS_CPP23.md  TICKET_486_DEFENSIVE_CHECKS_BENCHMARK.md  TICKET_486_QUICKFIX_PARITY_MATRIX.md
docs/design/: TICKET_497_1_TEST_HARDENING_REVIEW_FINDINGS.md  TICKET_497_COVERAGE_CONFIG_MATRIX.md  TICKET_497_SQLITE_STYLE_TEST_HARDENING.md
examples/: CMakeLists.txt  quick_start.cpp
fuzz/: CMakeLists.txt  fuzz_runtime_parser.cpp  fuzz_serializer_roundtrip.cpp  fuzz_session_input.cpp  fuzz_structural_index.cpp  gen_corpus.py
fuzz/corpus/fuzz_runtime_parser/: bad_bad_bodylen  bad_missing_checksum  bad_no_soh  logon_43  logon_44  nos_43  nos_44  nos_50
fuzz/corpus/fuzz_serializer_roundtrip/: exec_50  logon_50  nos_42
fuzz/corpus/fuzz_serializer_roundtrip/regressions/: fixedprice_qty_combine_overflow  post_checksum_trailing_fields
fuzz/corpus/fuzz_session_input/: bad_huge_bodylen  bad_unterminated_field  exec_42  heartbeat_42  heartbeat_43  heartbeat_44  heartbeat_50  logon_42  logon_43  logon_44  logon_50  resend_42  resend_43  resend_44  resend_50
fuzz/corpus/fuzz_session_input/regressions/: simd_scanner_unpadded_oob
fuzz/corpus/fuzz_structural_index/: bad_non_digit_tag  exec_43  exec_44  logon_42
fuzz/corpus/fuzz_structural_index/regressions/: equals_count_overflow  overlong_tag_overflow
include/nexusfix/: nexusfix.hpp
include/nexusfix/engine/: fix_acceptor.hpp  fix_initiator.hpp  socket_bridge.hpp
include/nexusfix/interfaces/: i_message.hpp
include/nexusfix/memory/: buffer_pool.hpp  mpsc_queue.hpp  object_pool.hpp  seqlock.hpp
include/nexusfix/messages/common/: trailer.hpp
include/nexusfix/messages/fix43/: execution_report.hpp  fix43.hpp  market_data_request.hpp  market_data_snapshot.hpp  new_order_single.hpp  order_cancel_request.hpp
include/nexusfix/messages/fix44/: market_data.hpp  new_order_single.hpp
include/nexusfix/messages/fixt11/: session.hpp
include/nexusfix/parser/: consteval_parser.hpp  field_view.hpp  runtime_parser.hpp  simd_checksum.hpp  simd_scanner.hpp  structural_index.hpp  timestamp_parser.hpp
include/nexusfix/platform/: socket_types.hpp
include/nexusfix/sbe/types/: composite_types.hpp
include/nexusfix/session/: session_manager.hpp  state.hpp
include/nexusfix/transport/: tcp_transport.hpp  winsock_transport.hpp
include/nexusfix/types/: error.hpp  field_types.hpp  tag.hpp
include/nexusfix/util/: bit_utils.hpp  branch_hints.hpp  branchless.hpp  cpu_affinity.hpp  diagnostic.hpp  format_utils.hpp  logger.hpp  prefetch.hpp  ranges_utils.hpp  thread_local_pool.hpp
scripts/: coverage_gate.sh
tests/: CMakeLists.txt  test_boundary_sweep.cpp  test_coroutine.cpp  test_e2e.cpp  test_fault_injection.cpp  test_fix43.cpp  test_fix44_builders.cpp  test_fuzz_regressions.cpp  test_logger.cpp  test_memory_lock.cpp  test_memory_message_store.cpp  test_message_error_paths.cpp  test_mimalloc.cpp  test_parser.cpp  test_property.cpp  test_quickfix_parity.cpp  test_ranges_utils.cpp  test_rdtsc_timestamp.cpp  test_ring_buffer.cpp  test_sbe_codecs.cpp  test_session.cpp  test_types.cpp
tests/support/: failing_resource.hpp
