# benchmarks/CMakeLists.txt
# NexusFIX Benchmarks

# Parse latency benchmark
add_executable(parse_benchmark parse_benchmark.cpp)
target_link_libraries(parse_benchmark PRIVATE nexusfix)

# Session throughput benchmark
add_executable(session_benchmark session_benchmark.cpp)
target_link_libraries(session_benchmark PRIVATE nexusfix)

# Timing comparison benchmark (rdtscp vs nanobench)
add_executable(timing_comparison timing_comparison.cpp)
target_link_libraries(timing_comparison PRIVATE nexusfix)
target_include_directories(timing_comparison PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

# Set output directory
set_target_properties(parse_benchmark session_benchmark timing_comparison
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Hash map benchmark (std::unordered_map vs absl::flat_hash_map)
if(NFX_ENABLE_ABSEIL)
    add_executable(hash_map_bench hash_map_bench.cpp)
    target_link_libraries(hash_map_bench PRIVATE nexusfix)
    # Disable strict warnings for Abseil compatibility (uses __int128)
    target_compile_options(hash_map_bench PRIVATE
        -O3 -march=native
        -Wno-pedantic -Wno-overflow -Wno-error
    )
    set_target_properties(hash_map_bench PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
    )
endif()

# CPU affinity benchmark
add_executable(cpu_affinity_bench cpu_affinity_bench.cpp)
target_link_libraries(cpu_affinity_bench PRIVATE nexusfix pthread)
target_compile_options(cpu_affinity_bench PRIVATE -O3 -march=native)
set_target_properties(cpu_affinity_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Ranges utilities benchmark (C++23 feature comparison)
add_executable(ranges_utils_bench ranges_utils_bench.cpp)
target_link_libraries(ranges_utils_bench PRIVATE nexusfix pthread)
target_compile_options(ranges_utils_bench PRIVATE -O3 -march=native)
set_target_properties(ranges_utils_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Deferred processor benchmark
add_executable(deferred_processor_bench deferred_processor_bench.cpp)
target_link_libraries(deferred_processor_bench PRIVATE nexusfix pthread)
target_compile_options(deferred_processor_bench PRIVATE -O3 -march=native)
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_compile_options(deferred_processor_bench PRIVATE -Wno-interference-size)
endif()
set_target_properties(deferred_processor_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Optimization summary benchmark (before vs after all optimizations)
add_executable(optimization_summary_bench optimization_summary_bench.cpp)
target_link_libraries(optimization_summary_bench PRIVATE nexusfix pthread)
target_compile_options(optimization_summary_bench PRIVATE -O3 -march=native -Wno-pedantic -Wno-overflow -Wno-error)
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_compile_options(optimization_summary_bench PRIVATE -Wno-interference-size)
endif()
set_target_properties(optimization_summary_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Registered buffers benchmark (io_uring)
add_executable(registered_buffers_bench registered_buffers_bench.cpp)
target_link_libraries(registered_buffers_bench PRIVATE nexusfix pthread uring)
target_compile_options(registered_buffers_bench PRIVATE -O3 -march=native)
set_target_properties(registered_buffers_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Multishot receive benchmark (io_uring)
add_executable(multishot_recv_bench multishot_recv_bench.cpp)
target_link_libraries(multishot_recv_bench PRIVATE nexusfix pthread uring)
target_compile_options(multishot_recv_bench PRIVATE -O3 -march=native)
set_target_properties(multishot_recv_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Thread-local pool benchmark
add_executable(thread_local_pool_bench thread_local_pool_bench.cpp)
target_link_libraries(thread_local_pool_bench PRIVATE nexusfix pthread)
target_compile_options(thread_local_pool_bench PRIVATE -O3 -march=native)
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_compile_options(thread_local_pool_bench PRIVATE -Wno-interference-size)
endif()
set_target_properties(thread_local_pool_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Message store PMR benchmark (before vs after PMR optimization)
add_executable(message_store_pmr_bench message_store_pmr_bench.cpp)
target_link_libraries(message_store_pmr_bench PRIVATE nexusfix pthread)
target_compile_options(message_store_pmr_bench PRIVATE -O3 -march=native)
set_target_properties(message_store_pmr_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Compile-time serializer benchmark
add_executable(constexpr_serializer_bench constexpr_serializer_bench.cpp)
target_link_libraries(constexpr_serializer_bench PRIVATE nexusfix pthread)
target_compile_options(constexpr_serializer_bench PRIVATE -O3 -march=native)
set_target_properties(constexpr_serializer_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# SIMD checksum benchmark
add_executable(simd_checksum_bench simd_checksum_bench.cpp)
target_link_libraries(simd_checksum_bench PRIVATE nexusfix pthread)
target_compile_options(simd_checksum_bench PRIVATE -O3 -march=native)
set_target_properties(simd_checksum_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Batch submit benchmark (io_uring)
add_executable(batch_submit_bench batch_submit_bench.cpp)
target_link_libraries(batch_submit_bench PRIVATE nexusfix pthread uring)
target_compile_options(batch_submit_bench PRIVATE -O3 -march=native)
set_target_properties(batch_submit_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# io_uring transport integration benchmark (registered buffers + multishot)
add_executable(io_uring_transport_integration_bench io_uring_transport_integration_bench.cpp)
target_link_libraries(io_uring_transport_integration_bench PRIVATE nexusfix pthread uring)
target_compile_options(io_uring_transport_integration_bench PRIVATE -O3 -march=native)
set_target_properties(io_uring_transport_integration_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# MPSC queue benchmark (Disruptor-pattern multi-producer single-consumer)
add_executable(mpsc_queue_bench mpsc_queue_bench.cpp)
target_link_libraries(mpsc_queue_bench PRIVATE nexusfix pthread)
target_compile_options(mpsc_queue_bench PRIVATE -O3 -march=native)
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_compile_options(mpsc_queue_bench PRIVATE -Wno-interference-size)
endif()
set_target_properties(mpsc_queue_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# SBE binary encoding benchmark (SBE vs FIX text parsing)
add_executable(sbe_benchmark sbe_benchmark.cpp)
target_link_libraries(sbe_benchmark PRIVATE nexusfix pthread)
target_compile_options(sbe_benchmark PRIVATE -O3 -march=native)
set_target_properties(sbe_benchmark PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Phase 2 utilities benchmark (branchless, string hash, seqlock, object pool)
add_executable(phase2_utils_bench phase2_utils_bench.cpp)
target_link_libraries(phase2_utils_bench PRIVATE nexusfix pthread)
target_compile_options(phase2_utils_bench PRIVATE -O3 -march=native)
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_compile_options(phase2_utils_bench PRIVATE -Wno-interference-size)
endif()
set_target_properties(phase2_utils_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Optimization flags for benchmarks
target_compile_options(parse_benchmark PRIVATE -O3 -march=native)
target_compile_options(session_benchmark PRIVATE -O3 -march=native)
target_compile_options(timing_comparison PRIVATE -O3 -march=native)

# MsgType dispatch benchmark (TICKET_022)
add_executable(msgtype_dispatch_bench msgtype_dispatch_bench.cpp)
target_link_libraries(msgtype_dispatch_bench PRIVATE nexusfix pthread)
target_compile_options(msgtype_dispatch_bench PRIVATE -O3 -march=native)
set_target_properties(msgtype_dispatch_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Error message mapping benchmark (TICKET_023)
add_executable(error_message_bench error_message_bench.cpp)
target_link_libraries(error_message_bench PRIVATE nexusfix pthread)
target_compile_options(error_message_bench PRIVATE -O3 -march=native)
set_target_properties(error_message_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Session state machine benchmark (TICKET_023)
add_executable(session_state_bench session_state_bench.cpp)
target_link_libraries(session_state_bench PRIVATE nexusfix pthread)
target_compile_options(session_state_bench PRIVATE -O3 -march=native)
set_target_properties(session_state_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# FIX version detection benchmark (TICKET_023)
add_executable(fix_version_bench fix_version_bench.cpp)
target_link_libraries(fix_version_bench PRIVATE nexusfix pthread)
target_compile_options(fix_version_bench PRIVATE -O3 -march=native)
set_target_properties(fix_version_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Tag metadata benchmark (TICKET_023)
add_executable(tag_metadata_bench tag_metadata_bench.cpp)
target_link_libraries(tag_metadata_bench PRIVATE nexusfix pthread)
target_compile_options(tag_metadata_bench PRIVATE -O3 -march=native)
set_target_properties(tag_metadata_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Field types benchmark (TICKET_023)
add_executable(field_types_bench field_types_bench.cpp)
target_link_libraries(field_types_bench PRIVATE nexusfix pthread)
target_compile_options(field_types_bench PRIVATE -O3 -march=native)
set_target_properties(field_types_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Market data types benchmark (TICKET_023)
add_executable(market_data_types_bench market_data_types_bench.cpp)
target_link_libraries(market_data_types_bench PRIVATE nexusfix pthread)
target_compile_options(market_data_types_bench PRIVATE -O3 -march=native)
set_target_properties(market_data_types_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Structural index benchmark (TICKET_208 simdjson-style)
add_executable(structural_index_bench structural_index_bench.cpp)
target_link_libraries(structural_index_bench PRIVATE nexusfix pthread)
target_include_directories(structural_index_bench PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_options(structural_index_bench PRIVATE -O3 -march=native)
set_target_properties(structural_index_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# mimalloc vs PMR benchmark (optional, requires NFX_ENABLE_MIMALLOC=ON)
if(NFX_ENABLE_MIMALLOC)
    add_executable(mimalloc_bench mimalloc_bench.cpp)
    target_link_libraries(mimalloc_bench PRIVATE nexusfix pthread)
    target_include_directories(mimalloc_bench PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
    target_compile_options(mimalloc_bench PRIVATE -O3 -march=native)
    set_target_properties(mimalloc_bench PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
    )

    add_executable(session_heap_isolation_bench session_heap_isolation_bench.cpp)
    target_link_libraries(session_heap_isolation_bench PRIVATE nexusfix pthread)
    target_include_directories(session_heap_isolation_bench PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
    target_compile_options(session_heap_isolation_bench PRIVATE -O3 -march=native)
    set_target_properties(session_heap_isolation_bench PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
    )
endif()

# SIMD timestamp parse benchmark (TICKET_443: scalar vs AVX2)
add_executable(timestamp_parse_bench timestamp_parse_bench.cpp)
target_link_libraries(timestamp_parse_bench PRIVATE nexusfix pthread)
target_include_directories(timestamp_parse_bench PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_options(timestamp_parse_bench PRIVATE -O3 -march=native)
set_target_properties(timestamp_parse_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# SIMD scanner benchmark (scalar vs AVX2 vs AVX-512)
add_executable(simd_scanner_bench simd_scanner_bench.cpp)
target_link_libraries(simd_scanner_bench PRIVATE nexusfix pthread)
target_compile_options(simd_scanner_bench PRIVATE -O3 -march=native)
set_target_properties(simd_scanner_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# QuickFIX comparison benchmark (optional)
add_subdirectory(vs_quickfix)

# Simple parse test (debug performance)
add_executable(simple_parse_test simple_parse_test.cpp)
target_link_libraries(simple_parse_test PRIVATE nexusfix pthread)
target_include_directories(simple_parse_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_options(simple_parse_test PRIVATE -O3 -march=native)
set_target_properties(simple_parse_test PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Optimized parse test (TICKET_444: test scalar vs SIMD for '=' search)
add_executable(optimized_parse_test optimized_parse_test.cpp)
target_link_libraries(optimized_parse_test PRIVATE nexusfix pthread)
target_include_directories(optimized_parse_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_options(optimized_parse_test PRIVATE -O3 -march=native)
set_target_properties(optimized_parse_test PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Field loop only benchmark (TICKET_450: isolate field loop cost)
add_executable(field_loop_only_bench field_loop_only_bench.cpp)
target_link_libraries(field_loop_only_bench PRIVATE nexusfix pthread)
target_include_directories(field_loop_only_bench PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_options(field_loop_only_bench PRIVATE -O3 -march=native)
set_target_properties(field_loop_only_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# Defensive checks overhead benchmark (TICKET_486: CompID/SendingTime/PossDup)
add_executable(defensive_checks_bench defensive_checks_bench.cpp)
target_link_libraries(defensive_checks_bench PRIVATE nexusfix pthread)
target_include_directories(defensive_checks_bench PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_options(defensive_checks_bench PRIVATE -O3 -march=native)
set_target_properties(defensive_checks_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

# End-to-end pipeline benchmark (TICKET_481: NOS->ER round-trip over TCP loopback)
add_executable(pipeline_bench pipeline_bench.cpp)
target_link_libraries(pipeline_bench PRIVATE nexusfix pthread)
target_include_directories(pipeline_bench PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_options(pipeline_bench PRIVATE -O3 -march=native)
set_target_properties(pipeline_bench PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/benchmarks
)

